fix option text wrapping

--- a/src/components/CalorieCalc.css
+++ b/src/components/CalorieCalc.css
@@ -194,8 +194,8 @@ form[data-show-results="false"] {
 
 .option {
 	display: flex;
-	flex-wrap: wrap;
-	width: clamp(200px, 300px, 80vw);
+	/* flex-wrap: wrap; */
+	width: clamp(200px, 320px, 80vw);
 	/* display: grid;
   grid-template-columns: 3em 1fr 3em; */
 	font-size: clamp(0.875rem, 0.7027rem + 0.9189vw, 2rem);
